--- a/volt.toml
+++ b/volt.toml
@@ -1,6 +1,6 @@
-name = "<plugin-name>"
-version = "0.0.0"
-author = "<your name>"
-display-name = "<plugin-display-name>"
-description = "<plugin-description>"
-wasm = "bin/<plugin-name>.wasm"
+name = "lapce-zig"
+version = "0.0.1"
+author = "Chetan Vardhan"
+display-name = "Zig"
+description = "Zig plugin for Lapce (powered by zls)"
+wasm = "lapce-zig.wasm"
